# signal_pr

./: .gitignore  AGENTS.md  Phases.md  README.md  pyproject.toml
src/pr_assistant/: __init__.py  ai_input_builder.py  ai_review_generation.py  classification_rules.py  classifier.py  config.py  github_app.py  github_client.py  github_webhooks.py  main.py  review_formatter.py  review_pipeline.py  risk_scoring.py  signals.py
src/pr_assistant/ai/: __init__.py  providers.py
tests/: test_ai_input_builder.py  test_ai_providers.py  test_ai_review_generation.py  test_classifier.py  test_config.py  test_github_app.py  test_github_client.py  test_review_formatter.py  test_risk_scoring.py  test_signals.py
